--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,41 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= preload_link_tag 'https://fonts.gstatic.com' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag "application", "data-turbo-track": "reload" %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="bg-gray-veryLightGray font-body text-body1 text-blue-darkerBlue dark:bg-blue-veryDarkBlue dark:text-white">
+    <header class="flex items-center justify-between px-4 py-8 shadow-md md:px-16 dark:bg-blue-dark">
+      <h1 class="font-extrabold">Where in the world?</h1>
+      <button><span class="material-icons">dark_mode</span></button>
+    </header>
+    <div class="my-8 ml-4 md:flex md:ml-16">
+      <div class="flex items-center h-16 p-3 mb-10 mr-4 rounded shadow md:w-4/12 dark:bg-blue-dark">
+        <span class="ml-4 material-icons text-gray-dark dark:text-white">search</span>
+        <input type="search" placeholder="Search for a country" class="ml-8 bg-transparent dark:placeholder-white">
+      </div>
+      <div class="absolute z-50 mr-16 rounded md:right-0 md:w-1/5">
+        <div class="flex items-center justify-between px-6 py-4 bg-white rounded shadow dark:bg-blue-dark">
+          <span>Filter by Region</span>
+          <button>
+            <span class="material-icons">expand_more</span>
+          </button>
+        </div>
+        <ul class="px-6 py-4 mt-1 bg-white rounded shadow opacity-0 transition-opacity duration-300 dark:bg-blue-dark">
+          <li>Africa</li>
+          <li>America</li>
+          <li>Asia</li>
+          <li>Europe</li>
+          <li>Oceanie</li>
+        </ul>
+      </div>
+    </div>
+    <main class="w-9/12 mx-auto mt-36 md:grid md:grid-cols-4 md:gap-10 md:w-auto md:mt-0 md:mx-16">
+      <%= yield %>
+    </main>
   </body>
 </html>
