--- a/app/views/countries/_country.html.erb
+++ b/app/views/countries/_country.html.erb
@@ -1,9 +1,11 @@
-<div class="rounded shadow">
-  <img src="<%= country.flag %>" alt="">
-  <div class="p-4 mb-10">
-    <h1 class="mb-3 text-xl font-extrabold"><%= country.name %></h1>
-    <p><span class="font-semibold">Population</span>: <%= country.population %></p>
-    <p><span class="font-semibold">Region</span>: <%= country.region %></p>
-    <p><span class="font-semibold">Capital</span>: <%= country.capital %></p>
+<a href="<%= country_path(country.name) %>">
+  <div class="h-full mb-10 rounded shadow surface hover:bg-gray-veryLightGray dark:hover:bg-blue-veryDarkBlue">
+    <img src="<%= country.flag %>" alt="">
+    <div class="p-8">
+      <h1 class="mb-3 text-xl font-extrabold"><%= country.name %></h1>
+      <p><span class="font-semibold">Population: </span><%= country.population %></p>
+      <p><span class="font-semibold">Region: </span><%= country.region %></p>
+      <p><span class="font-semibold">Capital: </span><%= country.capital %></p>
+    </div>
   </div>
-</div>
+</a>
