--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -12,6 +12,10 @@
 	@apply bg-white dark:bg-blue-dark rounded shadow
 }
 
+.btn {
+	@apply flex items-center px-8 py-2 surface
+}
+
 ul {
 	li {
 		@apply py-2 px-6 cursor-pointer
@@ -21,5 +25,14 @@ ul {
 	}
 	li:hover {
 		@apply bg-gray-veryLightGray dark:bg-blue-veryDarkBlue
+	}
+}
+
+div.borders {
+	a {
+		@apply mb-4 md:mr-4
+	}
+	a:last-of-type {
+		@apply mb-0
 	}
 }
