Update routes and fix event listeners

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,5 +1,5 @@
 <div class="md:flex">
-  <form action="/countries" class="flex items-center h-16 p-3 mb-10 mr-4 surface md:w-4/12 dark:bg-blue-dark">
+  <form class="flex items-center h-16 p-3 mb-10 mr-4 surface md:w-4/12 dark:bg-blue-dark">
     <button type="submit" class="flex">
       <span class="ml-4 material-icons text-gray-dark dark:text-white">search</span>
     </button>
