--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body class="bg-gray-veryLightGray font-body text-body1 text-blue-darkerBlue dark:bg-blue-veryDarkBlue dark:text-white">
 
     <header class="flex items-center justify-between px-6 py-8 shadow-md surface md:px-16 dark:bg-blue-dark">
-      <a href="/countries">
+      <a href="/">
         <h1 class="text-xl font-extrabold">Where in the world?</h1>
       </a>
       <form>
