--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,4 +1,4 @@
-<a href="<%= home_path %>">
+<a href="/">
   <button class="flex items-center px-8 py-2 mb-16 surface">
     <span class="mr-2 material-icons">arrow_back</span>
     <span>Back</span>
