--- a/app/views/countries/_details.html.erb
+++ b/app/views/countries/_details.html.erb
@@ -1,5 +1,5 @@
 <div class="md:flex md:h-72">
-  <img src="<%= country.flag %>" class="shadow">
+  <img src="<%= country.flag %>" alt="<%= country.name %>" class="shadow">
   <div class="p-6 ml-10">
     <h1 class="mb-6 text-2xl font-extrabold"><%= country.name %></h1>
     <div class="leading-7 md:flex">
