--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="<%= cookies[:theme] %>">
+<html lang="en" class="<%= cookies[:theme] %>">
   <head>
     <title>RestCountries</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
