--- a/app/views/countries/_country.html.erb
+++ b/app/views/countries/_country.html.erb
@@ -1,5 +1,5 @@
-<a href="<%= country_path(country.name) %>">
-  <div class="h-full mb-10 rounded shadow surface hover:bg-gray-veryLightGray dark:hover:bg-blue-veryDarkBlue">
+<div class="mb-10 surface hover:bg-gray-veryLightGray dark:hover:bg-blue-veryDarkBlue">
+  <a href="<%= country_path(country.name) %>">
     <img src="<%= country.flag %>" alt="<%= country.name %>"class="shadow">
     <div class="p-8">
       <h1 class="mb-3 text-xl font-extrabold"><%= country.name %></h1>
@@ -7,5 +7,5 @@
       <p><span class="font-semibold">Region: </span><%= country.region %></p>
       <p><span class="font-semibold">Capital: </span><%= country.capital %></p>
     </div>
-  </div>
-</a>
+  </a>
+</div>
