--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,10 @@
         <h1 class="text-xl font-extrabold">Where in the world?</h1>
       </a>
       <form>
-        <input type="hidden" name="theme" id="theme">
-        <button type="submit"><span class="material-icons">dark_mode</span></button>
+        <input type="hidden" name="theme">
+        <button type="submit" data-toggle="dark">
+          <span class="material-icons">dark_mode</span>
+        </button>
       </form>
     </header>
 
