--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -28,5 +28,6 @@
 </div>
 
 <main class="w-9/12 mx-auto mt-36 md:grid md:grid-cols-4 md:gap-10 md:w-auto md:mt-0">
-  <%= render @countries %>
+  <%= futurize partial: "country", collection: @countries, controller: CountriesController, extends: :div do %>
+  <% end %>
 </main>
