--- a/app/views/countries/_country.html.erb
+++ b/app/views/countries/_country.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-10 surface hover:bg-gray-veryLightGray dark:hover:bg-blue-veryDarkBlue">
-  <a href="<%= country_path(country.name) %>">
+  <a href="<%= country_path(country.name) %>" target="_top">
     <img src="<%= country.flag %>" alt="<%= country.name %>"class="shadow">
     <div class="p-8">
       <h1 class="mb-3 text-xl font-extrabold"><%= country.name %></h1>
