--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -16,7 +16,8 @@
 	@apply flex items-center px-8 py-2 surface
 }
 
-ul {
+ul#region-select {
+	opacity: 0;
 	li {
 		@apply py-2 px-6 cursor-pointer
 	}
