--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,25 +1,31 @@
 <div class="md:flex">
   <form class="flex items-center h-16 p-3 mb-10 mr-4 surface md:w-4/12">
+    <% if params[:theme] %>
+      <input type="hidden" value="<%= params[:theme] %>" name="theme" />
+    <% end %>
     <button type="submit" class="flex">
       <span class="ml-4 material-icons text-gray-dark dark:text-white">search</span>
     </button>
-    <input data-reflex="input->Countries#find_by_name"type="search" name="name" placeholder="Search for a country" class="ml-8 bg-transparent dark:placeholder-white" aria-label="Search for a country">
+    <input type="search" name="name" placeholder="Search for a country" class="ml-8 bg-transparent dark:placeholder-white" aria-label="Search for a country">
   </form>
 
   <div class="absolute z-50 mr-16 rounded md:right-0 md:w-1/5">
-    <div class="flex items-center justify-between w-56 px-6 py-4 md:w-auto surface">
-      <span><%= params[:region] && !params[:region].strip.empty? ? params[:region] : 'Filter by Region' %></span>
-      <button class="flex" data-expand="region-select" aria-haspopup="listbox">
-        <span class="material-icons">expand_more</span>
-      </button>
-    </div>
-
     <form id="region-form">
-      <input type="hidden" name="region">
-      <ul id="region-select" class="py-4 mt-1 opacity-0 surface transition-opacity duration-300" role="listbox" aria-label="Select a region">
+      <input type="checkbox" id="toggle-regions" class="absolute w-0 h-0 opacity-0">
+
+      <div class="flex items-center justify-between w-56 px-6 py-4 md:w-auto surface">
+        <span><%= params[:region] && !params[:region].strip.empty? ? params[:region] : 'Filter by Region' %></span>
+
+        <label for="toggle-regions" class="flex">
+          <span class="material-icons"></span>
+        </label>
+      </div>
+
+      <input type="hidden" name="region" />
+      <ul id="region-select" class="py-4 mt-1 surface transition-opacity duration-300" role="listbox" aria-label="Select a region">
         <% %w[ Africa Americas Asia Europe Oceania ].each do |region| %>
           <% unless params[:region] == region %>
-            <%= content_tag(:li, content_tag(:button, "#{region}"), data: { reflex: "click->Countries#find_by_region", region: "#{region}" }, role: "option") %>
+              <%= link_to "#{region}", countries_path(region: region, theme: params[:theme]), role: "option" %>
           <% end %>
         <% end %>
       </ul>
