--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>RestCountries</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= yield :cache_control %>
+    <%= yield :visit_control %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
