--- a/app/views/countries/_details.html.erb
+++ b/app/views/countries/_details.html.erb
@@ -20,7 +20,7 @@
       <span class="font-semibold md:mr-4">Border Countries: </span>
       <div class="flex flex-col mt-2 gap-2 md:flex-row md:flex-wrap">
         <% country.processed_borders.each do |border| %>
-          <%= button_to country_path(border, theme: params[:theme]), method: :get, form: { data: { "turbo-frame": "country", "turbo": false } }, class: "btn" do %>
+          <%= button_to country_path(border), params: ({ theme: params[:theme] } unless cookies[:theme]), method: :get, form: { data: { "turbo": false } }, class: "btn" do %>
             <%= border %>
           <% end %>
         <% end %>
